--- a/src/components/navBar/navbar.css
+++ b/src/components/navBar/navbar.css
@@ -23,6 +23,11 @@
     display: flex;
     align-items: center;
 }
+.active{
+    line-height: 30px;
+    border-bottom: 3px solid #fff;
+}
+
 .logo{
     width: 70px;
 }
